# gprof_ir

./: README.md  pyproject.toml
.github/: install_and_test.yml
manuscript/: ametsocV6.bst  main.tex  references.bib
src/gprof_ir/: __init__.py  cli.py  config.py  imerg.py  plotting.py  retrieval.py  satrain.py  testing.py
src/gprof_ir/config_files/: gprof_ir_ss_inference.toml
src/gprof_ir/data/: __init__.py  cloudsat.py  gpm.py  gridsat_b1.py  merged_ir.py
tests/: conftest.py  test_retrieval.py
tests/data/: test_gpm.py  test_merged_ir.py
