[build-system]
requires = ["setuptools", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gprof_ir"
description = "A precipitation retrieval for geostationary IR observations."
authors = [{ name = "Simon Pfreundschuh", email = "simon.pfreundschuh@colostate.edu" }]
license = { file = "MIT" }
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "appdirs",
    "click",
    "filelock",
    "huggingface_hub",
    "numpy",
    "pandas",
    "pytorch_retrieve>=0.1",
    "rich",
    "toml",
    "xarray[io]",
]
dynamic = ["version"]

[tool.setuptools]
packages = ["gprof_ir"]
package-dir = {"" = "src"}

[project.scripts]
"gprof_ir" = "gprof_ir.cli:gprof_ir"


[tool.setuptools.package-data]
"gprof_ir" = ["config_files/*.toml"]
